# AI-Candidate-Sourcing-Engine

./: .replit  DEPLOYMENT.md  PROJECT_WRITEUP.md  README.md  api.py  app.py  cache.json  config.py  demo.py  groq_utils.py  main.py  message.py  pyproject.toml  render.yaml  replit.md  requirements.txt  score.py  search.py  sourcing_results_20250629_094404.json  test_deployment.py  test_synapse_job.py
frontend/: index.html
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CandidateCard.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  JobForm.tsx  ResultsDisplay.tsx
frontend/src/types/: index.ts
