[project]
name = "AI Sourcing"
version = "0.1.0"
description = "This is the AI based Project using Groq Ai, LinkedIn and Google"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
